# chat-lucek

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
.github/: dependabot.yml  pull_request_template.md
agent/: .env.example  .gitignore  Dockerfile  README.md  langgraph.json  pyproject.toml
agent/evals/: README.md  conftest.py  harness.py  report_email.py  test_ability.py  test_routing.py  test_search.py  test_tone.py
agent/evals/fixtures/: search_budget_spent.json  search_limit_reached.json
agent/evals/online/: conversation_length.js  overcapped_searches.js  pii_scan.js  prompt_injection.py  push_prompt.py  thread_helpfulness.py
agent/src/: config.py  events.py  server.py  state.py  utils.py
agent/src/graphs/: agent.py  subagent.py
agent/src/middleware/: summarization.py
agent/src/prompts/: agent_prompt.py  subagent_prompt.py  summary_prompt.py
agent/src/tools/: subagent_tool.py  todo_list.py  web_search.py
agent/tests/: test_agent_graph.py  test_config.py  test_evals_harness.py  test_events.py  test_imports.py  test_prompts.py  test_server.py  test_subagent_graph.py  test_subagent_tool.py  test_summarization.py  test_todo_list.py  test_utils.py  test_web_search.py
api/: .dockerignore  Dockerfile  README.md  account.go  account_test.go  agent.go  agent_test.go  agentz_test.go  auth.go  auth_handlers.go  auth_handlers_test.go  auth_test.go  chat.go  config.go  config_test.go  conversations_test.go  cors.go  cors_test.go  db.go  disposable.go  disposable_test.go  email.go  email_test.go  feedback_schema_test.go  feedback_test.go  go.mod  go.sum  google_auth.go  google_auth_test.go  (+26 more)
(+177 files in other folders)
