[project]
name = "chat-lucek-agent"
version = "0.1.0"
description = "The agent powering chat.lucek.ai"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=1.2.8",
    "pydantic>=2.13.4",
    "langchain-openrouter>=0.2.5",
    "fastapi>=0.139.2",
    "uvicorn[standard]>=0.51.0",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "langchain-openai>=1.3.4",
    "tavily-python>=0.7.26",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "httpx>=0.28.1",
    "langgraph-api>=0.11.0",
    "langgraph-cli[inmem]>=0.4.31",
    "pip-audit>=2.10.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.22",
]
evals = [
    "langsmith[pytest]>=0.10.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
